# archon-sdlc

./: .gitignore  CLAUDE.md  LICENSE  README.md  cleanup.sh  deploy.sh
backend/: pyproject.toml
backend/agents/codegen_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/codereview_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/documentation_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/planner_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/requirements_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/security_agent/: handler.py  prompt.py  pyproject.toml
backend/agents/testgen_agent/: handler.py  prompt.py  pyproject.toml
backend/api/: create_project.py  get_artifact.py  get_project.py  get_stages.py  list_projects.py  plan.py  pyproject.toml  response.py  start_pipeline.py  stop_pipeline.py
backend/shared/: pyproject.toml
backend/shared/src/shared/: __init__.py  bedrock.py  dynamodb.py  models.py  s3.py
backend/shared/tests/: test_models.py
docs/: Issues.md  SPEC.md  project6-user-stories.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  cognito.ts
frontend/src/components/: ArtifactViewer.tsx  LoginPage.tsx  Logo.tsx  PipelineDashboard.tsx  ProjectCreator.tsx  ProjectList.tsx
frontend/src/hooks/: usePolling.ts
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: sdlc-orchestrator-stack.ts
(+7 files in other folders)
