[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.34.0",
    "boto3-stubs[bedrock-runtime,dynamodb,s3]>=1.34.0",
]

[tool.setuptools.packages.find]
where = ["src"]
